# WarpSearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
tests/: test_warpsearch.py
warpsearch/: cli.py  monitor_script.sh  vectorstore.py
