[project]
name = "warpsearch"
version = "0.1"
description = "Your smol and local image search engine"
readme = "README.md"
authors = [{name = "Aditya Ganesh Kumar"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/adtygan/warpsearch"
Changelog = "https://github.com/adtygan/warpsearch/releases"
Issues = "https://github.com/adtygan/warpsearch/issues"
CI = "https://github.com/adtygan/warpsearch/actions"

[project.entry-points.console_scripts]
warpsearch = "warpsearch.cli:cli"

# fixes error of blip-caption
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning:huggingface_hub.file_download",
]

[project.optional-dependencies]
test = ["pytest"]
